# govee-server

./: Cargo.toml  README.md
docs/: design.md
src/: main.rs
